Bug 251165 - Game->New does not change the new button in the sidebar to roll
Summary: Game->New does not change the new button in the sidebar to roll
Status: RESOLVED FIXED
Alias: None
Product: kiriki
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Unknown
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-14 00:42 UTC by Albert Astals Cid
Modified: 2010-09-17 06:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2010-09-14 00:42:15 UTC
Version:           0.1
OS:                Linux

* Start kiriki
* Make sure demo is running
* Game->New
* See how sidebar button instead says "New" instead of "Roll"

Reproducible: Always




OS: Linux (x86_64) release 2.6.32-24-generic
Compiler: cc
Comment 1 Parker Coates 2010-09-17 06:16:54 UTC
SVN commit 1176231 by coates:

Properly reset "New/Roll" button when starting game from menu.

Patch by Luiz Romário Santana Rios.
See http://reviewboard.kde.org/r/5337/ for more details.

BUG:251165

 M  +1 -1      kiriki.cpp  
 M  +8 -11     lateralwidget.cpp  
 M  +1 -1      lateralwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176231