Properly reset "New/Roll" button when starting game from menu.

Patch by Luiz Romário Santana Rios.
See http://reviewboard.kde.org/r/5337/ for more details.

BUG:251165

svn path=/trunk/KDE/kdegames/kiriki/; revision=1176231